WEBC-1450 - fixing text alignment to the center

--- a/packages/ui/src/components/announcement/_announcement.scss
+++ b/packages/ui/src/components/announcement/_announcement.scss
@@ -72,7 +72,7 @@
   .playkit-size-md {
     :local {
       .announcementWrapper {
-        padding: 10px 16px 13px
+        padding: 14px 16px 14px
       }
       .iconContainer {
         width: 44px;
